--- a/PhotoJournal/Base.lproj/Main.storyboard
+++ b/PhotoJournal/Base.lproj/Main.storyboard
@@ -1,24 +1,119 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Photo Journal View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="PhotoJournalViewController" customModule="PhotoJournal" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IH8-qb-vPp">
+                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                                <items>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="DSU-oh-YRe"/>
+                                    <barButtonItem systemItem="add" id="cOM-XQ-iIl">
+                                        <connections>
+                                            <action selector="PlusButton:" destination="BYZ-38-t0r" id="Wnc-VZ-0e4"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="hnF-9r-dmr"/>
+                                </items>
+                            </toolbar>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="IH8-qb-vPp" secondAttribute="trailing" id="56i-Fi-vKg"/>
+                            <constraint firstItem="IH8-qb-vPp" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="GK2-Z9-mtn"/>
+                            <constraint firstItem="IH8-qb-vPp" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="kIf-Cz-gH8"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="T0q-DW-hTM"/>
+                    <connections>
+                        <outlet property="ButtonPress" destination="cOM-XQ-iIl" id="pyO-gu-kZ4"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="760.79999999999995" y="133.5832083958021"/>
+        </scene>
+        <!--Title-->
+        <scene sceneID="g94-Lh-C8n">
+            <objects>
+                <viewController id="8qW-mb-MRe" customClass="DetailPhotoViewController" customModule="PhotoJournal" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="DF6-S1-JK0">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e8O-YB-Ya8">
+                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                                <items>
+                                    <barButtonItem title="Photo Library " id="ojn-s8-0Ba"/>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="aKM-AH-job"/>
+                                    <barButtonItem systemItem="camera" id="kab-q4-i6X"/>
+                                </items>
+                            </toolbar>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ewJ-4s-vQr">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <items>
+                                    <navigationItem title="Title" id="Qox-wL-bb5">
+                                        <barButtonItem key="leftBarButtonItem" title="Cancel " id="hdH-h3-IK1"/>
+                                        <barButtonItem key="rightBarButtonItem" title="Save" id="epK-6y-JnX"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="LLk-6P-rW2">
+                                <rect key="frame" x="0.0" y="64" width="375" height="228"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="228" id="uxY-DF-xD2"/>
+                                </constraints>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder-image-2" translatesAutoresizingMaskIntoConstraints="NO" id="Tkv-wP-qEk">
+                                <rect key="frame" x="0.0" y="292" width="375" height="331"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="331" id="BHj-zx-uk9"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="ewJ-4s-vQr" firstAttribute="leading" secondItem="e8O-YB-Ya8" secondAttribute="leading" id="9At-On-1jJ"/>
+                            <constraint firstItem="ewJ-4s-vQr" firstAttribute="leading" secondItem="Tkv-wP-qEk" secondAttribute="leading" id="Dos-IX-tyM"/>
+                            <constraint firstItem="ewJ-4s-vQr" firstAttribute="top" secondItem="60P-RA-Pz9" secondAttribute="top" id="GW9-jg-GVh"/>
+                            <constraint firstItem="ewJ-4s-vQr" firstAttribute="trailing" secondItem="Tkv-wP-qEk" secondAttribute="trailing" id="Nl1-xK-vUh"/>
+                            <constraint firstItem="ewJ-4s-vQr" firstAttribute="leading" secondItem="LLk-6P-rW2" secondAttribute="leading" id="bin-Bg-eg7"/>
+                            <constraint firstItem="LLk-6P-rW2" firstAttribute="trailing" secondItem="60P-RA-Pz9" secondAttribute="trailing" id="dHf-hf-eKZ"/>
+                            <constraint firstItem="ewJ-4s-vQr" firstAttribute="trailing" secondItem="LLk-6P-rW2" secondAttribute="trailing" id="eOX-sl-Krq"/>
+                            <constraint firstItem="Tkv-wP-qEk" firstAttribute="bottom" secondItem="e8O-YB-Ya8" secondAttribute="top" id="fsO-ba-1On"/>
+                            <constraint firstItem="Tkv-wP-qEk" firstAttribute="top" secondItem="LLk-6P-rW2" secondAttribute="bottom" id="kLo-fF-7Th"/>
+                            <constraint firstItem="LLk-6P-rW2" firstAttribute="leading" secondItem="60P-RA-Pz9" secondAttribute="leading" id="pvL-mS-olL"/>
+                            <constraint firstItem="ewJ-4s-vQr" firstAttribute="trailing" secondItem="e8O-YB-Ya8" secondAttribute="trailing" id="vnt-Fw-HrY"/>
+                            <constraint firstItem="LLk-6P-rW2" firstAttribute="top" secondItem="ewJ-4s-vQr" secondAttribute="bottom" id="w6C-V7-MG3"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="60P-RA-Pz9"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Title" id="2X0-sP-ko3"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="73K-U3-JWo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1440.8" y="133.5832083958021"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="placeholder-image-2" width="512" height="512"/>
+    </resources>
 </document>
