--- a/PhotoJournal/Base.lproj/Main.storyboard
+++ b/PhotoJournal/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="8qW-mb-MRe">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -29,6 +29,10 @@
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="hnF-9r-dmr"/>
                                 </items>
                             </toolbar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="placeholder-image-2" translatesAutoresizingMaskIntoConstraints="NO" id="zgW-LS-rzc">
+                                <rect key="frame" x="60" y="20" width="247" height="199"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -47,10 +51,11 @@
             </objects>
             <point key="canvasLocation" x="760.79999999999995" y="133.5832083958021"/>
         </scene>
-        <!--Title-->
+        <!--Detail Photo View Controller-->
         <scene sceneID="g94-Lh-C8n">
             <objects>
-                <viewController id="8qW-mb-MRe" customClass="DetailPhotoViewController" customModule="PhotoJournal" customModuleProvider="target" sceneMemberID="viewController">
+                <placeholder placeholderIdentifier="IBFirstResponder" id="73K-U3-JWo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController storyboardIdentifier="DetailPhoto" id="8qW-mb-MRe" customClass="DetailPhotoViewController" customModule="PhotoJournal" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="DF6-S1-JK0">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -58,7 +63,11 @@
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e8O-YB-Ya8">
                                 <rect key="frame" x="0.0" y="623" width="375" height="44"/>
                                 <items>
-                                    <barButtonItem title="Photo Library " id="ojn-s8-0Ba"/>
+                                    <barButtonItem title="Photo Library " id="ojn-s8-0Ba">
+                                        <connections>
+                                            <action selector="PhotoLibraryPressed:" destination="8qW-mb-MRe" id="gps-NX-ndR"/>
+                                        </connections>
+                                    </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="aKM-AH-job"/>
                                     <barButtonItem systemItem="camera" id="kab-q4-i6X"/>
                                 </items>
@@ -106,9 +115,11 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="60P-RA-Pz9"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Title" id="2X0-sP-ko3"/>
+                    <connections>
+                        <outlet property="ImageView" destination="Tkv-wP-qEk" id="cLW-ff-uo1"/>
+                        <outlet property="cameraButton" destination="kab-q4-i6X" id="UpR-X0-qjq"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="73K-U3-JWo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1440.8" y="133.5832083958021"/>
         </scene>
